[package]
name = "riscu"
version = "0.0.1"
authors = ["Jonathan Behrens <fintelia@gmail.com>", "Christian Mösl <christian.moesl@live.at>", "Fabian Nedoluha <monster@onders.org>"]
edition = "2018"
description = "A simple library for loading/encoding RISC-U ELF64 binaries"
documentation = "https://docs.rs/riscu"
repository = "https://github.com/cksystemsgroup/riscu"
homepage = "http://selfie.cs.uni-salzburg.at"
license = "MIT"
categories = ["embedded", "encoding", "parsing"]
keywords = ["riscv", "riscu"]

[dependencies]
thiserror = "~1.0.22"
byteorder = "~1.3.4"
goblin = "~0.2.3"

[dev-dependencies]
tempfile = "~3.1.0"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
